[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynflows"
version = "0.0.2"
authors = [
  { name="Dario van den Boom", email="dario.van.den.boom@rwth-aachen.de" },
]
description = "A library for flows over time."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]